refactor: use 'Optional.ofNullable(sorter)' instead of 'if (sorter != null) {...}'